fixing alignment of retweets

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -408,10 +408,10 @@ div.et2_smallpart_comment_retweet {
 	border-top: 1px solid #1dace440;
 	padding-top: 3px;
 	padding-left: 19px;
-	text-indent: -9px;
-}
-div.et2_smallpart_comment_retweet span.glyphicon {
-	padding-right: 5px;
+	text-indent: -12px;
+	span.glyphicon {
+		top: -2px;
+	}
 }
 div.et2_smallpart_comment_retweet span.et2_smallpart_comment_retweeter,
 div.et2_smallpart_comment span.et2_smallpart_comment_time {
